# fw16-pongwars

./: Cargo.toml  README.md  app.manifest  build.rs  settings.example.toml
.github/workflows/: ci.yml  release.yml  windows-build.yml
src/: calibration.rs  game.rs  led_matrix.rs  main.rs  power.rs  settings.rs  settings_dialog.rs  tray.rs
