[package]
name = "fw16-pong-wars"
version = "1.0.2"
edition = "2021"

[dependencies]
anyhow = "1.0"
ctrlc = "3.4"
clap = { version = "4.5", features = ["derive"] }
rand = { version = "0.8", features = ["small_rng"] }
serialport = "4.5"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Power", "Win32_System_Console", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
winreg = "0.52"
tray-icon = "0.21"
image = { version = "0.25", default-features = false, features = ["ico"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dev-dependencies]
