[package]
name = "fw16-pongwars"
version = "1.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
ctrlc = "3.4"
clap = { version = "4.5", features = ["derive"] }
rand = { version = "0.8", features = ["small_rng"] }
serialport = "4.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Power", "Win32_System_Console", "Win32_System_LibraryLoader", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Controls", "Win32_Graphics_Gdi"] }
winreg = "0.52"
tray-icon = "0.21"
image = { version = "0.25", default-features = false, features = ["ico"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.packager]
product-name = "FW16 Pong Wars"
identifier = "com.fw16.pongwars"
description = "Pong Wars on the Framework Laptop 16 LED Matrix"
icons = ["assets/icon.ico"]
before-packaging-command = "cargo build --all-features --release"

[package.metadata.packager.nsis]
installer-icon = "assets/icon.ico"
installer-mode = "currentUser"
appdata-paths = ["$APPDATA/FW16PongWars"]

[dev-dependencies]
